--- a/index.html
+++ b/index.html
@@ -12,6 +12,34 @@
 </head>
 
 <body>
+    <div class="row">
+        <div class="col s12">
+            <p>s12</p>
+        </div>
+        <div class="col s12 m4 l2">
+            <p>s12 m4</p>
+        </div>
+        <div class="col s12 m4 l8">
+            <p>s12 m4</p>
+        </div>
+        <div class="col s12 m4 l2">
+            <p>s12 m4</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col s12 m6 l3">
+            <p>s12 m6 l3</p>
+        </div>
+        <div class="col s12 m6 l3">
+            <p>s12 m6 l3</p>
+        </div>
+        <div class="col s12 m6 l3">
+            <p>s12 m6 l3</p>
+        </div>
+        <div class="col s12 m6 l3">
+            <p>s12 m6 l3</p>
+        </div>
+    </div>
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
